# aira

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  electron-builder.yml  eslint.config.js  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml  docker-publish.yml
backend/: package.json  tsconfig.json
backend/src/: app.ts  lifecycle.ts  server.ts
backend/src/config/: paths.ts
backend/src/db/: index.test.ts  index.ts
backend/src/middleware/: security.test.ts  security.ts
backend/src/routes/: agents-repos.ts  files.ts  health.ts  mcp.ts  messages.ts  projects.ts  runs.ts  settings.test.ts  settings.ts  skills.ts
backend/src/services/: agent-manager.ts  agent-runner-process.ts  agent.service.test.ts  preflight.ts  (+21 more)
container/: Dockerfile  build.sh
container/agent-runner/: index.mjs  package.json
docs/adr/: ADR-001-frontend-framework.md  ADR-002-backend-runtime.md
docs/design/: DES-001-system-architecture.md
docs/requirements/: REQ-001-system-requirements.md
e2e/: app.spec.ts  chat.spec.ts  projects.spec.ts  settings.spec.ts  skill-loading.spec.ts
electron/: main.ts  preload.cjs  preload.ts  tsconfig.json
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  useT.ts
skills/co-scientist/: .mcp.json  AGENTS.md
skills/spread1000-assistant/: AGENTS.md  README.md  copilot-instructions.md  group.json  skill.json
steering/: project.md
steering/rules/: constitution.md
tests/e2e/: chat-duplication.spec.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
(+60 files in other folders)
