[package]
name = "aira-wasm"
version = "0.1.0"
edition = "2021"
description = "AIRA WASM markdown/mermaid renderer"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
ammonia = "4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
